# roboto_bms

./: .gitignore  CMakeLists.txt  build_deb.sh  package.xml
.github/workflows/: build-deb.yml
cmake/: roboto_bmsConfig.cmake
debian/: control  postinst  prerm
etc/default/: bms_daemon.default
etc/systemd/system/: bms.service  bms_ota.service
include/: bms_driver.hpp  bms_protocol.hpp  bms_status.h
scripts/: bms_ota.py
src/: bms_daemon.cpp  main.cpp  protocol.cpp
src/drivers/tws/: protocol.cpp  tws_bms_driver.hpp
